--- a/index.html
+++ b/index.html
@@ -10,7 +10,103 @@
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
 
 
-    <title>Document</title>
+    <title>Arya-Sport</title>
+    <!-- JSON-LD for Website -->
+<script type="application/ld+json">
+{
+  "@context": "http://www.schema.org",
+  "@type": "WebSite",
+  "name": "Arya-Sport",
+  "alternateName": "Aryaaaaa",
+  "url": "https://aryamaulanaaaa.github.io/Arya-Sport/"
+}
+</script>
+<!-- JSON-LD for Products -->
+<script type="application/ld+json">
+{
+  "@context": "http://www.schema.org",
+  "@type": "Product",
+  "brand": "Adidas",
+  "name": "Predator",
+  "offers": {
+    "@type": "Offer",
+    "price": "2300000",
+    "priceCurrency": "IDR"
+  },
+  "image": "https://www.adidas.co.id/media/catalog/product/cache/a2326ed7dcde4da57fee4197e095ea73/j/p/jp5737_1_footwear_photography_side20lateral20center20view_grey.jpg"
+}
+</script>
+<script type="application/ld+json">
+{
+  "@context": "http://www.schema.org",
+  "@type": "Product",
+  "brand": "Nike",
+  "name": "Nike Mercurial Superfly 9 Elite",
+  "offers": {
+    "@type": "Offer",
+    "price": "4500000",
+    "priceCurrency": "IDR"
+  },
+  "image": "https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/25cc3c76-9257-48f7-9908-2a9443c49e88/ZOOM+SUPERFLY+9+ELITE+FG+AS.png"
+}
+</script>
+<script type="application/ld+json">
+{
+  "@context": "http://www.schema.org",
+  "@type": "Product",
+  "brand": "New Balance",
+  "name": "Fortress",
+  "offers": {
+    "@type": "Offer",
+    "price": "3000000",
+    "priceCurrency": "IDR"
+  },
+  "image": "https://nb.scene7.com/is/image/NB/ufpwrk1_nb_02_i?$pdpflexf2$&wid=464&hei=464"
+}
+</script>
+<script type="application/ld+json">
+{
+  "@context": "http://www.schema.org",
+  "@type": "Product",
+  "brand": "Adidas",
+  "name": "Adizero Prime X 2.0 Strung",
+  "offers": {
+    "@type": "Offer",
+    "price": "3000000",
+    "priceCurrency": "IDR"
+  },
+  "image": "https://www.adidas.co.id/media/catalog/product/cache/da73f7d26ad11f1980ada40c1f6e78fa/i/f/if9427_2_footwear_photography_side20lateral20view_grey.jpg"
+}
+</script>
+<script type="application/ld+json">
+{
+  "@context": "http://www.schema.org",
+  "@type": "Product",
+  "brand": "Nike",
+  "name": "Alphafly 3 Premium",
+  "offers": {
+    "@type": "Offer",
+    "price": "4000000",
+    "priceCurrency": "IDR"
+  },
+  "image": "https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/b98e67b8-45cf-4bfa-81f8-c1f3ea6461de/AIR+ZOOM+ALPHAFLY+NEXT%25+3+PRM.png"
+}
+</script>
+<script type="application/ld+json">
+{
+  "@context": "http://www.schema.org",
+  "@type": "Product",
+  "brand": "New Balance",
+  "name": "Fuelcell Rebel V4",
+  "offers": {
+    "@type": "Offer",
+    "price": "4500000",
+    "priceCurrency": "IDR"
+  },
+  "image": "https://nb.scene7.com/is/image/NB/mfcxll4_nb_05_i?$pdpflexf2$&wid=440&hei=440"
+}
+</script>
+    
 </head>
 
 <body class="bg-white">
